// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationNumItem should render with pageNum > 1 1`] = `
<li
  className="page-item"
>
  <div
    data-mock="Link"
  >
    {
  "className": "page-link",
  "to": "/2"
}
    2
  </div>
</li>
`;

exports[`PaginationNumItem should render with pageNum > 1 and active 1`] = `
<li
  className="page-item active"
>
  <div
    data-mock="Link"
  >
    {
  "className": "page-link",
  "to": "/2"
}
    2
  </div>
</li>
`;

exports[`PaginationNumItem should render with pageNum 1`] = `
<li
  className="page-item"
>
  <div
    data-mock="Link"
  >
    {
  "className": "page-link"
}
    1
  </div>
</li>
`;
